demo: webkit-scrollbar selector
* Test out the webkit-scrollbar selector to create a custom black/yellow
scrollbar.
* https://developer.mozilla.org/en-US/docs/Web/CSS/::-webkit-scrollbar
* https://webkit.org/blog/363/styling-scrollbars/

* TIL: Doesn't have any support in Firefox :thought_balloon:

--- a/src/responsive-navbar-flexbox/index.html
+++ b/src/responsive-navbar-flexbox/index.html
@@ -64,5 +64,27 @@
             ectodermal
             dysplasia characterised by a woolly hair phenotype.
         </p>
+
+        <h2>Origin</h2>
+        <p>Origin
+            The Cornish Rex is a genetic mutation that originated from a litter of kittens born in the 1950s on a farm
+            in Cornwall,
+            UK.[5] One of the kittens, a cream-colored male named Kallibunker, had an extremely unusual, fine and curly
+            coat; he was
+            the first Cornish Rex. The owner then backcrossed Kallibunker to his mother to produce 2 other curly-coated
+            kittens. The
+            male, Poldhu, sired a female called Lamorna Cove who was later brought to America and crossed with a
+            Siamese, giving the
+            breed their long whippy tails and big ears.
+
+            The Devon Rex looks similar in appearance to the Cornish Rex but has guard hairs and sheds. The Devon Rex
+            mutation is
+            different from the Cornish Rex mutation in that the Devon has shortened guard hairs, while the Cornish Rex
+            lacks guard
+            hairs altogether. Crosses between Devon and Cornish Rexes are not permitted in pedigrees and matings between
+            them will
+            not produce a cat with short wavy fur. Another hair-deficient breed is the Sphynx cat, which has no hair but
+            may have a
+            very light coat of fuzz.</p>
     </main>
 </body>
