implement simple progress bar

--- a/src/progress-bar/index.html
+++ b/src/progress-bar/index.html
@@ -8,10 +8,31 @@
 
 <body>
   <div class="progress-bar-container">
-    <div class="progress-bar"></div>
+    <div class="progress-bar" style="width:0%"></div>
   </div>
 
   <main>
+    <h1>Progress Bar ⚡</h1>
+    <p>
+      With some simple HTML, CSS and vanilla JavaScript we end up with a pretty cool progress bar.
+    </p>
+    <code>
+      .progress-bar-container {
+      top: 0;
+      left: 0;
+      position: fixed;
+      height: 1rem;
+      display: flex;
+      background-color: rgb(161, 160, 160);
+      width: 100%;
+      }
+      
+      .progress-bar {
+      background-color: var(--yellow);
+      transition: 100ms ease;
+      }
+    </code>
+    <p>👇 Scroll down to check it out!</p>
     <h1>The Cornish Rex</h1>
     <p>
       A Cornish Rex is a breed of domestic cat. The Cornish Rex has no hair
@@ -65,6 +86,63 @@
       the structural integrity of the hair shaft. In humans, LPAR6 mutations
       result in a form of ectodermal dysplasia characterised by a woolly hair
       phenotype.
+    </p>
+
+    <h2>Origin</h2>
+    <p>
+      Origin The Cornish Rex is a genetic mutation that originated from a litter
+      of kittens born in the 1950s on a farm in Cornwall, UK.[5] One of the
+      kittens, a cream-colored male named Kallibunker, had an extremely unusual,
+      fine and curly coat; he was the first Cornish Rex. The owner then
+      backcrossed Kallibunker to his mother to produce 2 other curly-coated
+      kittens. The male, Poldhu, sired a female called Lamorna Cove who was
+      later brought to America and crossed with a Siamese, giving the breed
+      their long whippy tails and big ears. The Devon Rex looks similar in
+      appearance to the Cornish Rex but has guard hairs and sheds. The Devon Rex
+      mutation is different from the Cornish Rex mutation in that the Devon has
+      shortened guard hairs, while the Cornish Rex lacks guard hairs altogether.
+      Crosses between Devon and Cornish Rexes are not permitted in pedigrees and
+      matings between them will not produce a cat with short wavy fur. Another
+      hair-deficient breed is the Sphynx cat, which has no hair but may have a
+      very light coat of fuzz.
+    </p>
+
+    <h2>Origin</h2>
+    <p>
+      Origin The Cornish Rex is a genetic mutation that originated from a litter
+      of kittens born in the 1950s on a farm in Cornwall, UK.[5] One of the
+      kittens, a cream-colored male named Kallibunker, had an extremely unusual,
+      fine and curly coat; he was the first Cornish Rex. The owner then
+      backcrossed Kallibunker to his mother to produce 2 other curly-coated
+      kittens. The male, Poldhu, sired a female called Lamorna Cove who was
+      later brought to America and crossed with a Siamese, giving the breed
+      their long whippy tails and big ears. The Devon Rex looks similar in
+      appearance to the Cornish Rex but has guard hairs and sheds. The Devon Rex
+      mutation is different from the Cornish Rex mutation in that the Devon has
+      shortened guard hairs, while the Cornish Rex lacks guard hairs altogether.
+      Crosses between Devon and Cornish Rexes are not permitted in pedigrees and
+      matings between them will not produce a cat with short wavy fur. Another
+      hair-deficient breed is the Sphynx cat, which has no hair but may have a
+      very light coat of fuzz.
+    </p>
+
+    <h2>Origin</h2>
+    <p>
+      Origin The Cornish Rex is a genetic mutation that originated from a litter
+      of kittens born in the 1950s on a farm in Cornwall, UK.[5] One of the
+      kittens, a cream-colored male named Kallibunker, had an extremely unusual,
+      fine and curly coat; he was the first Cornish Rex. The owner then
+      backcrossed Kallibunker to his mother to produce 2 other curly-coated
+      kittens. The male, Poldhu, sired a female called Lamorna Cove who was
+      later brought to America and crossed with a Siamese, giving the breed
+      their long whippy tails and big ears. The Devon Rex looks similar in
+      appearance to the Cornish Rex but has guard hairs and sheds. The Devon Rex
+      mutation is different from the Cornish Rex mutation in that the Devon has
+      shortened guard hairs, while the Cornish Rex lacks guard hairs altogether.
+      Crosses between Devon and Cornish Rexes are not permitted in pedigrees and
+      matings between them will not produce a cat with short wavy fur. Another
+      hair-deficient breed is the Sphynx cat, which has no hair but may have a
+      very light coat of fuzz.
     </p>
 
     <h2>Origin</h2>
