fix: invalid html tag

--- a/src/responsive-navbar-flexbox/index.html
+++ b/src/responsive-navbar-flexbox/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <navbar class="nav">
+  <nav class="nav">
     <ul class="nav-list">
       <li class="logo">
         <a href="#" class="nav-link">
@@ -139,7 +139,7 @@
         </a>
       </li>
     </ul>
-  </navbar>
+  </nav>
 
   <main>
     <h1>The Cornish Rex</h1>
